[ZEPPELIN-4488]. Support Flink 1.10
### What is this PR for?
This ticket is to support Flink 1.10, support blink planner and more rich sql function.

### What type of PR is it?
[ Improvement ]

### Todos
* [ ] - Task

### What is the Jira issue?
* https://issues.apache.org/jira/browse/ZEPPELIN-4488

### How should this be tested?
* CI pass

### Screenshots (if appropriate)

### Questions:
* Does the licenses files need update? No
* Is there breaking changes for older versions? No
* Does this needs documentation? No

Author: Jeff Zhang <zjffdu@apache.org>

Closes #3556 from zjffdu/ZEPPELIN-4488 and squashes the following commits:

74913ce77 [Jeff Zhang] [ZEPPELIN-4488]. Support Flink 1.10